fix(modal, menu): fix spacing on the bottom for IE and firefox

--- a/src/styles/partials/menu.less
+++ b/src/styles/partials/menu.less
@@ -6,7 +6,6 @@
 	overflow-y: scroll;
 	z-index: 30; 
 	background: @dark;
-	padding: 0 0 200px;
 	left: -100%;
 	-webkit-transition: all 0.3s ease-in;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
 	transition: all 0.3s ease-in;
@@ -118,7 +117,7 @@
 	}
 
 	.application {
-		padding-top: 40px;
+	   padding: 40px 15px 200px;
 
 		h2 {
 			font-size: 30px;
