--- a/src/styles/partials/modal.less
+++ b/src/styles/partials/modal.less
@@ -5,7 +5,7 @@
 	height: 100%;
 	overflow-y: scroll;
 	z-index: 30; 
-	padding: 65px 0 200px;
+	padding: 65px 0 0;
 	background: white;
 	left: -100%;
 	-webkit-transition: all 0.3s ease-in;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
@@ -61,6 +61,7 @@
 	}
 
 	.content {
+		padding-bottom: 200px;
 
 		p {
 			font-size: 15px;
